Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gtk gtk
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,603
    • Issues 1,603
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 220
    • Merge requests 220
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • gtkgtk
  • Issues
  • #1466
Closed
Open
Issue created Nov 19, 2018 by Sean Davis@bluesabre

gtk_widget_get_scale_factor fallback monitor ignores 0-monitor possiblity

In the below code sample from gtk_widget_get_scale_factor, it is possible to pass in NULL to gdk_monitor_get_scale_factor, causing a segmentation fault. A common scenario where this can occur is with laptop lid-close events.

display = gtk_widget_get_display (widget);
monitor = gdk_display_get_monitor (display, 0);
return gdk_monitor_get_scale_factor (monitor);

Another fallback scenario should be added to just return 1 if no monitors are available.

Assignee
Assign to
Time tracking