Fix crash on laptop lid-close event (See https://gitlab.gnome.org/GNOME/gtk/issues/1466)